tenzir/integration/data/reference/pipelines_local/test_zeek_tsv_pipeline_format/step_16.ref
error: printer `zeek` could not be found
 --> <input>:1:34
  |
1 | from stdin read zeek-tsv | write zeek !-tsv --disable-timestamp-tags
  |                                  ^^^^ 
  |
  = hint: must be one of bitz, json, lines, pcap, xsv, csv, tsv, ssv, yaml, zeek-tsv, feather-store
  = docs: https://docs.tenzir.com/next/formats